--- a/admin/index.html
+++ b/admin/index.html
@@ -90,7 +90,11 @@
       <img src="logo.png" alt="Snoot Club logo" />
       <h1>Snoot Club — Admin</h1>
       <span id="adminStatus" class="tag" aria-live="polite">Locked</span>
+    
+      <span class="spacer"></span>
+      <button id="btnLogout" class="sm warn" data-hidden>Log out</button>
     </div>
+
 
     <!-- LOCK SCREEN -->
     <div id="lockCard" class="card" role="region" aria-labelledby="lockTitle">
