--- a/admin/index.html
+++ b/admin/index.html
@@ -20,7 +20,7 @@
       --radius:14px;
     }
     *{box-sizing:border-box}
-    html,body{margin:0;padding:0;font-family:system-ui,ui-sans-serif,Segoe UI,Roboto,Helvetica,Arial,sans-serif;background:var(--bg);color:var(--ink)}
+    html,body{margin:0;padding:0;font-family:system-ui,ui-sans-serif,Segoe UI,Roboto,Helvetica,Arial,sans-serif;background:#0d223a;color:var(--ink)}
     .wrap{max-width:1100px;margin:24px auto;padding:0 16px}
     .brand{display:flex;align-items:center;gap:14px}
     .brand img{height:38px;width:auto}
