--- a/admin/index.html
+++ b/admin/index.html
@@ -66,7 +66,7 @@
 </head>
 <body>
 <header>
-  <img src="./logo.png" alt="Logo">
+  <img src="/admin/logo.png" alt="Logo">
   <h1>Snoot Club — Admin Console</h1>
   <div class="right">
     <button id="logoutBtn" class="btn muted hidden" type="button">Log out (admin)</button>
