--- a/admin/index.html
+++ b/admin/index.html
@@ -25,10 +25,10 @@
     }
     header{
       display:flex; align-items:center; gap:14px;
-      padding:18px 20px; background:linear-gradient(90deg,var(--brand),var(--brand-2));
+      padding:18px 20px; background: #0d223a;
       color:#fff;
     }
-    header img{height:40px}
+    header img{height:120px}
     header h1{font-size:18px; margin:0; font-weight:600}
     main{max-width:1100px; margin:24px auto; padding:0 16px}
     .card{
